Finalizing GA flow

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,3 +40,4 @@ jobs:
         azcliversion: 2.30.0
         inlineScript: |
           az container create --name dawn --image peturssonstefan/dawn --ip-address public --resource-group primary
+          az container restart --name dawn --resource-group primary
